--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 body {
   background-color: aqua;
 }
+
+/* for line breaks */
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+/* for consistent borders */
+.border-gray-100 {
+  border-color: #f3f4f6;
+}
